# agent-context-ops

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cli-reference.md  demo.md  publishing.md  release-checklist.md  release-notes-v0.1.0.md  release-notes-v0.1.1.md  release-notes-v0.1.2.md  release-notes-v0.2.0.md  release-notes-v0.2.1.md  security-model.md
examples/: agent-context-ops.toml
examples/output/: context-pack.md  doctor.md
examples/sample-project/: AGENTS.md  README.md
examples/sample-project/docs/: decision.md
scripts/: smoke.py
src/agent_context_ops/: __init__.py  backup_check.py  cli.py  context_pack.py  council_log.py  doctor.py  fs_safety.py  graph_check.py  init_project.py  obsidian_log.py  redact.py  scan.py
tests/: test_cli.py  test_context_pack.py  test_doctor.py  test_graph_check.py  test_redact.py  test_scan.py
